# obs-studio-node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  abc  package.json  tsconfig.json
.github/workflows/: check-js-generated.yml  clang-format.yml  main.yml
ci/: bump-version.js  check-format.sh  check-js-generated.sh  configure-osn-osx.sh  install-dependencies-osx.sh  publish-flaky-check.js  run-unit-tests.js
cmake/: DownloadProject.CMakeLists.cmake.in
js/: module.d.ts  module.js  module.ts  tsconfig.json  type_check.js
obs-studio-client/: CMakeLists.txt
obs-studio-client/source/: advanced-recording.cpp  advanced-recording.hpp  advanced-replay-buffer.cpp  advanced-replay-buffer.hpp  advanced-streaming-base.cpp  advanced-streaming-base.hpp  advanced-streaming.cpp  advanced-streaming.hpp  audio-encoder.cpp  audio-encoder.hpp  audio-track.cpp  audio.cpp  best-effort-gate.cpp  best-effort-gate.hpp  cache-manager.hpp  callback-manager.cpp  callback-manager.hpp  controller.cpp  controller.hpp  delay.cpp  delay.hpp  enhanced-broadcasting-advanced-streaming.cpp  enhanced-broadcasting-advanced-streaming.hpp  enhanced-broadcasting-simple-streaming.cpp  enhanced-broadcasting-simple-streaming.hpp  fader.cpp  file-output.cpp  file-output.hpp  filter.cpp  global.cpp  global.hpp  input.cpp  input.hpp  isource.cpp  isource.hpp  main.cpp  module.cpp  network.cpp  network.hpp  nodeobs_api.cpp  (+49 more)
obs-studio-client/tests/: best-effort-gate-test.cpp  polling-pacer-best-effort-gate-test.cpp  polling-pacer-test.cpp
obs-studio-server/: CMakeLists.txt  OSN-ChildApp-Info.plist
obs-studio-server/dependencies/: obs64.exe.txt
obs-studio-server/source/: callback-manager.cpp  callback-manager.h  gs-vertex.cpp  gs-vertexbuffer.cpp  gs-vertexbuffer.h  main.cpp  memory-manager.cpp  memory-manager.h  nodeobs_api.cpp  nodeobs_api.h  nodeobs_autoconfig.cpp  nodeobs_autoconfig.h  nodeobs_autoconfig_resource_sampler.cpp  nodeobs_autoconfig_resource_sampler.h  nodeobs_common.cpp  nodeobs_configManager.cpp  nodeobs_display.cpp  nodeobs_display.h  nodeobs_service.cpp  nodeobs_service.h  nodeobs_settings-osx.h  nodeobs_settings-osx.mm  nodeobs_settings.cpp  nodeobs_settings.h  osn-advanced-recording.cpp  osn-advanced-recording.hpp  osn-advanced-replay-buffer.cpp  osn-advanced-replay-buffer.hpp  osn-advanced-streaming.cpp  osn-advanced-streaming.hpp  osn-audio-bitrate.cpp  osn-audio-bitrate.hpp  osn-audio-encoder.cpp  osn-audio-encoder.hpp  osn-audio-track.cpp  osn-audio-track.hpp  osn-audio.cpp  osn-delay.cpp  osn-delay.hpp  osn-encoders.cpp  (+68 more)
obs-studio-server/tests/: obs-setup.cpp  obs-setup.hpp  test-helper.cpp  test-helper.hpp  test-osn-source.cpp
profile-long-calls/: README.md  long-calls-analyzer.ts  package.json  tsconfig.json
source/: obs-property.cpp  obs-property.hpp
tests/osn-tests/media/: obs_scene_log_browser.html
tests/osn-tests/src/: test_audio_encoder.ts  test_nodeobs_api.ts  test_nodeobs_autoconfig.ts  test_nodeobs_service.ts  test_nodeobs_settings.ts  test_osn_advanced_recording.ts  test_osn_advanced_replayBuffer.ts  test_osn_advanced_streaming.ts  test_osn_advanced_streaming_rescale_migration.ts  test_osn_audio.ts  test_osn_autoconfig_v2.ts  test_osn_dual_output.ts  test_osn_enhanced_broadcasting_advanced_streaming.ts  test_osn_enhanced_broadcasting_simple_streaming.ts  test_osn_get_available_encoders.ts  test_osn_global.ts  test_osn_input.ts  test_osn_module.ts  test_osn_service.ts  test_osn_simple_recording.ts  test_osn_simple_replayBuffer.ts  test_osn_simple_streaming.ts  test_osn_source.ts  test_osn_video.ts  test_osn_video_encoder.ts  test_osn_virtualcam.ts  test_osn_worker_signals_gc.ts  test_virtualcam.ts
tests/osn-tests/util/: cache-uploader.ts  env.ts  error_messages.ts  general.ts  list-reporter.js  media_probe.ts  mock_rtmp.ts  obs_enums.ts  obs_handler.ts  retry_context.ts  user_pool_handler.ts
